@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,20 +23,30 @@
 
 /*
  * @test
+ * @modules java.base/sun.net.www.protocol.file
  * @bug 5052093
- * @modules java.base/sun.net.www java.base/sun.net.www.protocol.file
- * @library ../../../sun/net/www/httptest/
- * @build HttpCallback TestHttpServer ClosedChannelList HttpTransaction
- * @run main B5052093
+ * @library /test/lib
+ * @run main/othervm B5052093
  * @summary URLConnection doesn't support large files
  */
-import java.net.*;
-import java.io.*;
-import sun.net.www.protocol.file.FileURLConnection;
-import static java.net.Proxy.NO_PROXY;
 
-public class B5052093 implements HttpCallback {
-    private static TestHttpServer server;
+import java.io.File;
+import java.io.IOException;
+import java.net.InetAddress;
+import java.net.InetSocketAddress;
+import java.net.URL;
+import java.net.URLConnection;
+import java.util.concurrent.Executors;
+
+import com.sun.net.httpserver.HttpExchange;
+import com.sun.net.httpserver.HttpHandler;
+import com.sun.net.httpserver.HttpServer;
+import static java.net.Proxy.NO_PROXY;
+import jdk.test.lib.net.URIBuilder;
+import sun.net.www.protocol.file.FileURLConnection;
+
+public class B5052093 implements HttpHandler {
+    private static HttpServer server;
     private static long testSize = ((long) (Integer.MAX_VALUE)) + 2;
 
     public static class LargeFile extends File {
@@ -55,10 +65,11 @@ public class B5052093 implements HttpCallback {
         }
     }
 
-    public void request(HttpTransaction req) {
+    public void handle(HttpExchange req) {
         try {
-            req.setResponseHeader("content-length", Long.toString(testSize));
-            req.sendResponse(200, "OK");
+            req.getResponseHeaders().set("content-length", Long.toString(testSize));
+            req.sendResponseHeaders(200, 0);
+            req.close();
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -66,9 +77,18 @@ public class B5052093 implements HttpCallback {
 
     public static void main(String[] args) throws Exception {
         InetAddress loopback = InetAddress.getLoopbackAddress();
-        server = new TestHttpServer(new B5052093(), 1, 10, loopback, 0);
+        server = HttpServer.create(new InetSocketAddress(loopback, 0), 10);
+        server.createContext("/", new B5052093());
+        server.setExecutor(Executors.newSingleThreadExecutor());
+        server.start();
         try {
-            URL url = new URL("http://" + server.getAuthority() + "/foo");
+//            URL url = new URL("http://" + server.getAuthority() + "/foo");
+            URL url = URIBuilder.newBuilder()
+                    .scheme("http")
+                    .loopback()
+                    .port(server.getAddress().getPort())
+                    .path("/foo")
+                    .build().toURL();
             URLConnection conn = url.openConnection(NO_PROXY);
             int i = conn.getContentLength();
             long l = conn.getContentLengthLong();
@@ -89,7 +109,7 @@ public class B5052093 implements HttpCallback {
                 throw new RuntimeException("Wrong content-length from file");
             }
         } finally {
-            server.terminate();
+            server.stop(1);
         }
     }
 }
